--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: A beautiful two-column Jekyll theme
-description: A beautiful, minimal two-column portfolio theme built for Jekyll. Duet makes your work look simply awesome.
+title: Home
+description: I love spending time solving problems around me.
 featured_image: /images/social.jpg
 ---
 
@@ -9,9 +9,8 @@ featured_image: /images/social.jpg
 
 	<div class="wrap">
 
-		<h1>A beautiful, minimal two-column
-		portfolio theme built for Jekyll.</h1>
-		<p>Duet makes your work look simply awesome.</p>
+		<h1>Hi, I'm Anup. I love spending time solving problems around me. </h1>
+		<p>I'm also always trying to be less wrong.</p>
 
 	</div>
 
