--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 description: I love spending time solving problems around me.
-featured_image: /images/social.jpg
+featured_image:
 ---
 
 <section class="intro">
@@ -10,7 +10,7 @@ featured_image: /images/social.jpg
 	<div class="wrap">
 
 		<h1>Hi, I'm Anup. I love spending time solving problems around me. </h1>
-		<p>I'm also always trying to be less wrong.</p>
+		<p>I love <a href="/images/motorcycle.png">motorcycles</a>, <a href="/images/tongue.mp4">making silly faces at the camera</a>. I'm also always trying to be less wrong.</p>
 
 	</div>
 
