--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ featured_image:
 	<div class="wrap">
 
 		<h1>Hi, I'm Anup. I love spending time solving problems around me. </h1>
-		<p>I love <a href="/images/motorcycle.png">motorcycles</a>, <a href="https://gfycat.com/OddKnobbyBalloonfish">making silly faces at the camera</a>. I'm also always trying to be less wrong.</p>
+		<p>I love <a href="/motorcycle">motorcycles</a>, <a href="https://gfycat.com/OddKnobbyBalloonfish">making silly faces at the camera</a>. I'm also always trying to be less wrong.</p>
 
 	</div>
 
