Home page changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@ featured_image:
 	<div class="wrap">
 
 		<h1>Hi, I'm Anup. I love spending time solving problems around me. </h1>
-		<p>I love <a href="/motorcycle">motorcycles</a>, <a href="https://gfycat.com/OddKnobbyBalloonfish">making silly faces at the camera</a>. I'm also always trying to be less wrong.</p>
-
+		<p>I try to build better interfaces with a combination of <a href="https://en.wikipedia.org/wiki/Human–computer_interaction">HCI</a> research and electronics prototyping.</p>
+		<p>When I'm not working, I <a href="https://www.notion.so/anupsathya/575f2cea9754415396b9cabe33cbe0eb?v=65cefe1d202f4bcda46de6f06348d57d">read</a>, ride <a href="https://imgur.com/a/ots2Fmh">motorcycles</a>, make <a href="https://www.youtube.com/watch?v=dIP4wLybmks">travel compilations</a> and <a href="https://gfycat.com/OddKnobbyBalloonfish">silly faces at the camera.</a></p>
+		<p>I also maintain a document of my <a href="https://drive.google.com/open?id=1_IiBGC99fCZ0N91DzDkMUpFN6mLAEggL">work</a> and I write about things that I would <a href="https://medium.com/@anupsathya">read.</a></p>
+		<p>You can see some of my work below.</p>
 	</div>
 
 </section>
