Font and colour

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ featured_image:
 	<div class="wrap">
 
 		<h3>Hi, I'm Anup. I'm an engineer trying to design and build better interactions for educational systems.</h3>
-		<p>I use a blend of <a style="text-decoration:underline;" href="https://en.wikipedia.org/wiki/Human–computer_interaction">HCI</a> research and electronics prototyping to reduce the seams between us and our devices.</p>
-		<p>When I'm not working, I <a style="text-decoration:underline;" href="https://www.notion.so/anupsathya/575f2cea9754415396b9cabe33cbe0eb?v=65cefe1d202f4bcda46de6f06348d57d">read</a>, ride motorcycles, or watch British panel shows ad nauseam.</p>
-		<p>I also keep track of what I've <a style="text-decoration:underline;" href="https://drive.google.com/open?id=12FBrlFO7diZNMafzVFUqPmQrlLV12HRY">done</a> and I <a style="text-decoration:underline;" href="https://medium.com/@anupsathya">write</a> things that I would read.</p>
-		<p>You can see some of my work below.</p>
+		<p style="font-size:18px">I use a blend of <a style="text-decoration:underline;" href="https://en.wikipedia.org/wiki/Human–computer_interaction">HCI</a> research and electronics prototyping to reduce the seams between us and our devices.</p>
+		<p style="font-size:18px">When I'm not working, I <a style="text-decoration:underline;" href="https://www.notion.so/anupsathya/575f2cea9754415396b9cabe33cbe0eb?v=65cefe1d202f4bcda46de6f06348d57d">read</a>, ride motorcycles, or watch British panel shows ad nauseam.</p>
+		<p style="font-size:18px">I also keep track of what I've <a style="text-decoration:underline;" href="https://drive.google.com/open?id=12FBrlFO7diZNMafzVFUqPmQrlLV12HRY">done</a> and I <a style="text-decoration:underline;" href="https://medium.com/@anupsathya">write</a> things that I would read.</p>
+		<p style="font-size:18px">You can see some of my work below.</p>
 	</div>
 
 </section>
