--- a/index.html
+++ b/index.html
@@ -9,42 +9,123 @@ featured_image:
 
 	<div class="wrap">
 
-		<h3>Hi, I'm Anup. I'm an engineer trying to design and build better interactions.</h3>
-		<p style="font-size:18px">I use a blend of <a style="text-decoration:underline;" href="https://en.wikipedia.org/wiki/Human–computer_interaction">HCI</a> research and electronics prototyping to reduce the seams between us and our devices.</p>
-		<p style="font-size:18px">When I'm not working, I <a style="text-decoration:underline;" href="https://www.notion.so/anupsathya/575f2cea9754415396b9cabe33cbe0eb?v=65cefe1d202f4bcda46de6f06348d57d">read</a>, ride motorcycles, or watch British panel shows ad nauseam.</p>
-		<p style="font-size:18px">I also keep track of what I've <a style="text-decoration:underline;" href="https://drive.google.com/open?id=12FBrlFO7diZNMafzVFUqPmQrlLV12HRY">done</a> and I <a style="text-decoration:underline;" href="https://medium.com/@anupsathya">write</a> things that I would read.</p>
-		<p style="font-size:18px">You can see some of my work below.</p>
+		<h4>Hi, I am Anup.</h4>
+		<p>My primary interest is something I'd like to envision and call <em>Tangible Humane Technology</em> &mdash; a combination of <a href="http://gtubicomp2013.pbworks.com/w/file/fetch/65131525/ishii-tangible-bits-chi1997.pdf" style="text-decoration:underline;">Tangible Interaction</a> and<a style="text-decoration:underline;" href="https://ethical.net/glossary/what-is-humane-tech/"> Humane Technology</a>. I hope to achieve this vision by developing novel fabrication procedures that push <a href="https://www.ics.uci.edu/~djp3/classes/2012_09_INF241/papers/Weiser-Computer21Century-SciAm.pdf" style="text-decoration: underline;">ubiquitous computing</a> forward.</p>
+		<p>When I'm not writing website bios I'm probably <a style="text-decoration:underline;" href="https://anupsathyaumd.notion.site/anupsathyaumd/575f2cea9754415396b9cabe33cbe0eb?v=65cefe1d202f4bcda46de6f06348d57d">reading</a>, driving a <a style="text-decoration:underline;" href="/fun/racingsim">racing sim</a>, hanging off an indoor boulder, or learning a new musical instrument.</p>
+		<p style="font-size: 11px"><a style="text-decoration: underline;" href="/files/Anup_CV.pdf">CV</a> &nbsp;&nbsp;|&nbsp;&nbsp; <a style="text-decoration: underline;" href="https://scholar.google.com/citations?user=ObQ1GWsAAAAJ&hl=en">Google Scholar.</a></p>
 	</div>
 
 </section>
 
-<section class="portfolio">
+<section class="portfolio mt">
 
-	<div class="content-wrap portfolio-wrap">
+	<div class="wrap">
+		<h4>Selected Work</h4>
 
-		{% for project in site.projects reversed %}
+		<div class="content-wrap portfolio-wrap" style="margin-top: 1rem;">
 
-		<div class="portfolio-item">
+			<div class="portfolio-item" style="margin-top:1.8rem;">
 
-			<a class="portfolio-item__link" href="{{ project.url }}">
+				<div class="row">
+					<div class="col-md-3">
+						<img class="flex-auto" src="/images/calico/TeaserImage2.png">
+					</div>
+					<div class="col-md-9">
+						<div class="venue">Under Review at ACM IMWUT</div>
+						<h6 class="publication-title">Calico: Track Based Interactive and Relocatable Wearables with Fast, Reliable, and Precise Locomotion</h6>
+						<div class="authors"><strong>Anup Sathya</strong>, Jiasheng Li, Huaishu Peng</div>
+					</div>
+				</div>
+			</div>
+
+			{% for publication in site.publications reversed %}
+
+		<!-- <div class="portfolio-item">
+
+			<a class="portfolio-item__link" href="{{ publication.url }}">
 
 				<div class="portfolio-item__image">
-					<img src="{{ project.featured_image  }}" alt="{{ project.title }}">
+					<img src="{{ publication.featured_image  }}" alt="{{ publication.title }}">
 				</div>
 
 				<div class="portfolio-item__content">
 					<div class="portfolio-item__info">
-						<h2 class="portfolio-item__title">{{ project.title }}</h2>
-						<p class="portfolio-item__subtitle">{{ project.subtitle }}</p>
+						<h2 class="portfolio-item__title">{{ publication.title }}</h2>
+						<p class="portfolio-item__subtitle">{{ publication.subtitle }}</p>
 					</div>
 				</div>
 
 			</a>
 
+		</div> -->
+
+		<div class="portfolio-item" style="margin-top:1.8rem;">
+			
+			<div class="row">
+				<div class="col-md-3">
+					<img class="flex-auto" src="{{ publication.featured_image }}">
+				</div>
+				<div class="col-md-9">
+					<div class="venue">{{ publication.venue }}</div>
+					<h6 class="publication-title"><a class="publication-link" href="{{ publication.url }}">{{ publication.title }}</a></h6>
+					<div class="authors">{{ publication.authors }}</div>
+					<p class="links">
+						{% if publication.doi %}<a style="text-decoration:underline;" href="{{ publication.doi }}">DOI</a>{% endif %} {% if publication.pdf %}| <a style="text-decoration:underline;" href="{{ publication.pdf }}">PDF</a>{% endif %}
+					</p>
+				</div>
+			</div>
 		</div>
 
 		{% endfor %}
 
+		<div class="portfolio-item" style="margin-top:1.8rem;">
+			
+			<div class="row">
+				<div class="col-md-3">
+					<img class="flex-auto" src="/images/graph.png">
+				</div>
+				<div class="col-md-9">
+					<div class="venue">In Proceedings of IEEE TENCON 2017</div>
+					<h6 class="publication-title"><a class="publication-link" href="https://doi.org/10.1109/TENCON.2017.8228008">Visual Positioning System for Automated Indoor/Outdoor Navigation</a></h6>
+					<div class="authors"><strong>Anup Sathya</strong>, Abhinav Goel, Suresh Padmanabhan</div>
+					<p class="links">
+						<a style="text-decoration:underline;" href="https://doi.org/10.1109/TENCON.2017.8228008">DOI</a>
+					</p>
+				</div>
+			</div>
+		</div>
+
 	</div>
+	<h4 class="mt">UX Research</h4>
+
+	<div class="row mt">
+		{% for ux in site.ux reversed %}
+		<div class="grid-item col-sm-3">
+			<a href="{{ ux.url }}">
+				<img class="grid-thumbnail" src="{{ ux.featured_image }}">
+				<p class="grid-item-title">{{ ux.title }}</p>
+				<p class="grid-item-subtitle">{{ ux.subtitle }}</p>
+			</a>
+
+		</div>
+		{% endfor %}
+	</div>
+
+	<h4 class="mt">Fun Stuff</h4>
+
+	<div class="row mt">
+		{% for fun in site.fun reversed %}
+		<div class="grid-item col-sm-3">
+			<a href="{{ fun.url }}">
+				<img class="grid-thumbnail" src="{{ fun.featured_image }}">
+				<p class="grid-item-title">{{ fun.title }}</p>
+				<p class="grid-item-subtitle">{{ fun.subtitle }}</p>
+			</a>
+
+		</div>
+		{% endfor %}
+	</div>
+
+</div>
 
 </section>
