--- a/_pages/fun.html
+++ b/_pages/fun.html
@@ -1,13 +1,25 @@
 ---
-layout: project
+layout: default
 title: Fun Stuff
 subtitle: Things that are not work.
 featured_image:
 ---
 
-<div class="wrap">
 
-<div class="row mt">
+<section class="intro">
+
+	<div class="wrap">
+
+		<h1>{{ page.title }}</h1>
+		<p>{{ page.subtitle }}</p>
+
+	</div>
+
+</section>
+
+
+<div class="wrap">
+<div class="row mt" style="padding-top:2rem;">
 {% for fun in site.fun reversed %}
 	<div class="grid-item col-sm-3">
 	<a href="{{ fun.url }}">
