Front page change

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ featured_image:
 					<div class="col-md-9">
 						<div class="venue">Under Review at ACM IMWUT</div>
 						<h6 class="publication-title">Calico: Track Based Interactive and Relocatable Wearables with Fast, Reliable, and Precise Locomotion</h6>
-						<div class="authors"><strong>Anup Sathya</strong>, Jiasheng Li, Huaishu Peng</div>
+						<div class="authors"><strong>Anup Sathya</strong>, Jiasheng Li, Tauhidur Rahman, Huaishu Peng</div>
 					</div>
 				</div>
 			</div>
