Front page changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ featured_image:
 
 		<h4>Hi, I am Anup.</h4>
 		<p>I'm an incoming PhD student at the University of Chicago. I'm currently exploring my interests in tangible interaction, fabrication and interactive art.</p>
-		<p>When I'm not writing website bios I'm probably <a style="text-decoration:underline;" href="https://anupsathyaumd.notion.site/anupsathyaumd/575f2cea9754415396b9cabe33cbe0eb?v=65cefe1d202f4bcda46de6f06348d57d">reading</a>, driving a <a style="text-decoration:underline;" href="/fun/racingsim">racing sim</a>, hanging off an indoor boulder, or <a style="text-decoration:underline;" href="/fun/piano">learning</a> a new musical instrument.</p>
+		<p>When I'm not writing website bios I'm probably <a style="text-decoration:underline;" href="https://anupsathyaumd.notion.site/anupsathyaumd/575f2cea9754415396b9cabe33cbe0eb?v=65cefe1d202f4bcda46de6f06348d57d">reading</a>, driving a <a style="text-decoration:underline;" href="/fun/racingsim">racing sim</a>, hanging off an indoor boulder, or <a style="text-decoration:underline;" href="/fun/piano">learning</a> a new musical instrument. I've thoroughly excused myself from social media so feel free to reach out to me at anupsat [at] umd [dot] edu</p>
 		<p style="font-size: 11px"><a style="text-decoration: underline;" href="https://anupsathya.com/files/Anup_CV.pdf">CV</a> &nbsp;&nbsp;|&nbsp;&nbsp; <a style="text-decoration: underline;" href="https://scholar.google.com/citations?user=ObQ1GWsAAAAJ&hl=en">Google Scholar.</a></p>
 	</div>
 
