--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ featured_image:
 	<div class="wrap">
 
 		<h4>Hi, I am Anup.</h4>
-		<p>I'm a PhD student at the University of Chicago working with <a href="https://www.ken-nakagaki.com">Dr. Ken Nakagaki</a>. I'm currently exploring my interests in tangible interaction, fabrication and interactive art.</p>
-		<p>When I'm not writing website bios I'm probably <a style="text-decoration:underline;" href="https://anupsathyaumd.notion.site/anupsathyaumd/575f2cea9754415396b9cabe33cbe0eb?v=65cefe1d202f4bcda46de6f06348d57d">reading</a>, driving a <a style="text-decoration:underline;" href="/fun/racingsim">racing sim</a>, hanging off an indoor boulder, or <a style="text-decoration:underline;" href="/fun/piano">learning</a> a new musical instrument. I've thoroughly excused myself from social media so feel free to reach out to me at anupsat [at] umd [dot] edu</p>
+		<p>I'm a PhD student at the University of Chicago working with <a style="text-decoration: underline;" href="https://www.ken-nakagaki.com">Dr. Ken Nakagaki</a>. I'm currently exploring my interests in tangible interaction, fabrication and interactive art.</p>
+		<p>When I'm not writing website bios I'm probably <a style="text-decoration:underline;" href="https://anupsathyaumd.notion.site/anupsathyaumd/575f2cea9754415396b9cabe33cbe0eb?v=65cefe1d202f4bcda46de6f06348d57d">reading</a>, driving a <a style="text-decoration:underline;" href="/fun/racingsim">racing sim</a>, hanging off an indoor boulder, or <a style="text-decoration:underline;" href="/fun/piano">learning</a> a new musical instrument. I've thoroughly excused myself from social media so feel free to reach out to me at anups [at] uchicago [dot] edu</p>
 		<p style="font-size: 11px"><a style="text-decoration: underline;" href="https://anupsathya.com/files/Anup_CV.pdf">CV</a> &nbsp;&nbsp;|&nbsp;&nbsp; <a style="text-decoration: underline;" href="https://scholar.google.com/citations?user=ObQ1GWsAAAAJ&hl=en">Google Scholar.</a></p>
 	</div>
 
@@ -24,7 +24,8 @@ featured_image:
 
 		<div style="margin-top: 1rem;">
 
-			<div class="portfolio-item" style="margin-top:1.8rem;">
+
+<!-- 			<div class="portfolio-item" style="margin-top:1.8rem;">
 
 				<div class="row">
 					<div class="col-md-3">
@@ -36,7 +37,7 @@ featured_image:
 						<div class="authors"><strong>Anup Sathya</strong>, Jiasheng Li, Tauhidur Rahman, Huaishu Peng</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 
 			{% for publication in site.publications reversed %}
 
